--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.3",
+    "@langchain/community": "^0.0.36",
+    "@langchain/openai": "^0.0.19",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "googlephotos": "^0.3.5",
+    "langchain": "^0.1.32",
+    "open": "^10.1.0",
     "openai": "^4.28.4",
+    "prompt-sync": "^4.2.0",
     "twilio": "^4.23.0"
   },
   "name": "ai_tutor",
@@ -9,7 +20,8 @@
   "description": "AI Tutor Revolutionizing AI in Education",
   "main": "initial.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node initial.mjs"
   },
   "author": "",
   "license": "ISC"
