--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "@langchain/community": "^0.0.36",
     "@langchain/openai": "^0.0.19",
-    "axios": "^1.6.7",
+    "axios": "^1.7.5",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -13,6 +14,7 @@
     "open": "^10.1.0",
     "openai": "^4.28.4",
     "prompt-sync": "^4.2.0",
+    "puppeteer": "^19.11.1",
     "twilio": "^4.23.0"
   },
   "name": "ai_tutor",
