--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.19.2",
     "googlephotos": "^0.3.5",
     "langchain": "^0.1.32",
+    "multer": "^1.4.5-lts.1",
     "open": "^10.1.0",
     "openai": "^4.28.4",
     "prompt-sync": "^4.2.0",
